the last 101 errors